# websites

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  run.sh  taubyte-config.yaml  websites.service
migrations/: V1__websites.sql  V2__domains.sql  V3__customizations.sql  V4__pages.sql  V5__pages_add_is_home_page.sql  V6__static_pages.sql
src/: auth.rs  cloudflare.rs  custom_hostnames.rs  db.rs  images.rs  lib.rs  logging.rs  main.rs  publisher.rs  zitadel.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  sited_io.media.v1.rs  sited_io.ordering.v1.rs  sited_io.pagination.v1.rs  sited_io.types.v1.rs  sited_io.websites.v1.rs
src/model/: customization.rs  domain.rs  mod.rs  page.rs  static_page.rs  webiste.rs
src/services/: customization.rs  domain.rs  mod.rs  page.rs  static_page.rs  website.rs
