[package]
name = "websites"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
deadpool-postgres = "0.14.0"
fallible-iterator = "0.2.0"
http = "0.2"
jwtk = "0.3.0"
nanoid = "0.4.0"
openssl = { version = "0.10.64", features = ["vendored"] }
postgres-openssl = "0.5.0"
postgres-protocol = "0.6.6"
prost = "0.12.6"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
reqwest = "0.11"
sea-query = "0.30.7"
sea-query-postgres = { version = "0.4.0", features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.10.2"
tonic = "0.11.0"
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
tonic-web = "0.11.0"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
uuid = { version = "1.8.0", features = ["v4"] }
zitadel = { version = "4.3.5", features = ["api", "interceptors", "credentials"] }

[build-dependencies]
tonic-build = "0.11.0"
